Added more customs Exceptions, adjusted Board,Card and Player Entities. Moved some of the logic that used to be in GameService Entities itself into BoardService. WS works well with , Matchmaking, Chat and game interactions, therefore Issue #72 can be closed. Next would be adjusting some Surrendering/EndGame aspects that haven't been fully fleshed out yet with this new refactored code